--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -4,30 +4,55 @@
         <title>List of Users</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" th:href="@{/css/pure-min.css}" />
+        <style type="text/css">
+            .block {
+                display: block;
+            }
+            .text-center{
+                text-align: center;
+            }
+            .justify-center {
+                display: inline-block;
+                justify-content: center;
+                /*padding-left:2em;*/ 
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <table>
-                <tr>
-                    <th>Id</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Creation Date</th>
-                    <th>Last Login Date</th>
-                    <th>Is Logged</th>
-                </tr>
+        <div class="pure-g block">
+            <div class="pure-u-1-5"><!--pure-u-md-1-3-->
                 
-                <tr th:each="user : ${users}">
-                    <td>${user.id}</td>
-                    <td>${user.firstName}</td>
-                    <td>${user.lastName}</td>
-                    <td>${user.creationDate}</td>
-                    <td>${user.lastLoginDate}</td>
-                    <td>${user.isLogged}</td>
-                </tr>
-            </table>
+            </div>
+            <div class="pure-u-3-5 justify-center"><!--pure-u-md-1-3-->
                 
-            
+                <table class="pure-table pure-table-horizontal pure-table-striped">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Creation Date</th>
+                            <th>Last Login Date</th>
+                            <th>Is Logged</th>
+                        </tr>
+                    </thead>
+
+                    <tr th:each="user : ${users}">
+                        <td th:text="${user.id}"></td>
+                        <td th:text="${user.firstName}"></td>
+                        <td th:text="${user.lastName}"></td>
+                        <td th:text="${user.creationDate}"></td>
+                        <td th:text="${user.lastLoginDate}"></td>
+                        <td th:text="${user.isLogged}"></td>
+                    </tr>
+                </table>
+                
+            </div>
+            <div class="pure-u-1-5"><!--pure-u-md-1-3-->
+                HELLO
+            </div>
+                
         </div>
     </body>
 </html>
