--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -17,6 +17,12 @@
                 justify-content: center;
                 /*padding-left:2em;*/ 
             }
+            .button-warning{
+                color: white;
+                border-radius: 4px;
+                text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+                background: rgb(223, 117, 20); /* this is an orange */
+            }
         </style>
     </head>
     <body>
@@ -35,6 +41,7 @@
                             <th>Creation Date</th>
                             <th>Last Login Date</th>
                             <th>Is Logged</th>
+                            <th>UPDATE Action</th>
                         </tr>
                     </thead>
 
@@ -45,6 +52,11 @@
                         <td th:text="${user.creationDate}"></td>
                         <td th:text="${user.lastLoginDate}"></td>
                         <td th:text="${user.isLogged}"></td>
+                        <td>
+                            <a class="button-warning pure-button" th:href="@{'/users/'+${user.id}}">
+                                Update
+                            </a> 
+                        </td>
                     </tr>
                 </table>
                 
