--- a/src/main/resources/templates/userUpdateForm.html
+++ b/src/main/resources/templates/userUpdateForm.html
@@ -31,7 +31,7 @@
             </div>
             
             <div class="pure-u-1-3"><!--pure-u-md-1-3-->
-                <form class="pure-form pure-form-stacked" action="#" th:action="@{/user}" th:object="${userDTO}" method="POST">
+                <form class="pure-form pure-form-stacked" action="#" th:action="@{'/users/'+${id}}" th:object="${userDTO}" method="POST">
                     
                     <fieldset>
                         <legend>User Form Creation</legend>
@@ -44,6 +44,7 @@
                         <input  type="text" th:field="*{lastName}"/>
                         <div id="alert-name" class="alert alert-danger my-2" role="alert" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
 
+                        <input  type="hidden" th:value="${isLogged}"/>
                                               
                         <br/>
                         <button type="submit" class="button-secondary pure-button">
