Modify user deletion page result + Modify user update page result

--- a/src/main/resources/templates/deletedUser.html
+++ b/src/main/resources/templates/deletedUser.html
@@ -24,14 +24,14 @@
                     <div class="card-body">
                         <h5 class="card-title">User deleted</h5>
                         <p class="card-text">
-                            Your deleted user :
+                            Your user :
                         
                             <ul class="nav justify-content-center">
                                 <li class="nav-item">First Name : <b class="badge badge-dark" th:text="${user.firstName}"></b></li>
                                 <li class="nav-item">Last Name : <b class="badge badge-dark" th:text="${user.lastName}"></b></li>
                             </ul>
                         
-                            has been updated.
+                            has been deleted.
                         </p>
                     </div>
                 </div>
