--- a/src/main/resources/templates/updatedUser.html
+++ b/src/main/resources/templates/updatedUser.html
@@ -27,12 +27,12 @@ and open the template in the editor.
                     <div class="card-body">
                         <h5 class="card-title">User updated</h5>
                         <p class="card-text">
-                            Your user :
+                            Your updated user :
                             <ul class="nav justify-content-center">
                                 <li class="nav-item">First Name : <b class="badge badge-dark" th:text="${user.firstName}"></b></li>
                                 <li class="nav-item">Last Name : <b class="badge badge-dark" th:text="${user.lastName}"></b></li>
                             </ul>
-                            has been deleted.
+                            has been updated.
                         </p>
                     </div>
                 </div>
