Modify link to point back to the creation user url

--- a/src/main/resources/templates/createdUser.html
+++ b/src/main/resources/templates/createdUser.html
@@ -22,7 +22,7 @@
                     <div class="card-body">
                          <h5 class="card-title">User saved</h5>
                          <p class="card-text" th:text="'Your user '+${user.firstName}+' '+${user.lastName}+' has been created'"></p>
-                         <a class="btn btn-primary" th:href="@{/user}">Create another user</a>
+                         <a class="btn btn-primary" th:href="@{/user/create}">Create another user</a>
                     </div>    
                 </div>
             </div>
