--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -17,15 +17,21 @@
                 justify-content: center;
                 /*padding-left:2em;*/ 
             }
+            .button-success,
             .button-error,
             .button-warning{
                 color: white;
                 border-radius: 4px;
                 text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+            }
+            .button-warning{
                 background: rgb(223, 117, 20); /* this is an orange */
             }
             .button-error {
-                background: rgb(202, 60, 60); /* this is a maroon */
+                background: rgb(202, 60, 60); /* this is a red*/
+            }
+            .button-success{
+                 background: rgb(28, 184, 65); /* this is a green */
             }
         </style>
     </head>
@@ -45,6 +51,7 @@
                             <th>Creation Date</th>
                             <th>Last Login Date</th>
                             <th>Is Logged</th>
+                            <th>User Features</th>
                             <th>UPDATE Action</th>
                             <th>DELETE Action</th>
                         </tr>
@@ -57,6 +64,10 @@
                         <td th:text="${user.creationDate}"></td>
                         <td th:text="${user.lastLoginDate}"></td>
                         <td th:text="${user.isLogged}"></td>
+                        <td>
+                            <a class="button-success pure-button" th:href="@{'/users/'+${user.id}}" th:text="${user.firstName}+' '+${user.lastName}">
+                            </a> 
+                        </td>
                         <td>
                             <a class="button-warning pure-button" th:href="@{'/users/'+${user.id}}">
                                 Update
