Modify uri link to reach the update user form page

--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -69,7 +69,7 @@
                             </a> 
                         </td>
                         <td>
-                            <a class="button-warning pure-button" th:href="@{'/users/'+${user.id}}">
+                            <a class="button-warning pure-button" th:href="@{'/users/update/'+${user.id}}">
                                 Update
                             </a> 
                         </td>
