Embed fragment menu on each user page

--- a/src/main/resources/templates/updatedUser.html
+++ b/src/main/resources/templates/updatedUser.html
@@ -10,8 +10,15 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+        <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </head>
     <body>
+        
+        <div class="mxy-5" th:replace="fragments/menu :: menu">
+            
+        </div>
+        
         <div class="container">
             <div class="mx-auto text-center py-5">
                 <h1 class="display-4 px-2">User Modification Result</h1>
