--- a/src/main/resources/templates/createdUser.html
+++ b/src/main/resources/templates/createdUser.html
@@ -5,8 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+        <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </head>
     <body>
+        <div class="mxy-5" th:replace="fragments/menu :: menu">
+            
+        </div>
+        
         <div class="container">
             <div class="mx-auto text-center py-5">
                 <h1 class="display-4 px-2">User Creation Result</h1>
@@ -15,15 +21,19 @@
             <div class="form-group col-md-4">
             </div>
             
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-4 mx-auto">
                 
                 <div class="card text-white bg-success mb-3">
                     
                     <div class="card-header">Creation Success</div>
                     <div class="card-body">
                          <h5 class="card-title">User saved</h5>
-                         <p class="card-text" th:text="'Your user '+${user.firstName}+' '+${user.lastName}+' has been created'"></p>
-                         <a class="btn btn-primary" th:href="@{/user/create}">Create another user</a>
+                         <p class="card-text">
+                             Your user 
+                             <b class="text-warning" th:text="${user.firstName}+' '+${user.lastName}"></b> 
+                             has been created
+                         </p>
+                         <a class="btn btn-primary" th:href="@{/users/create}">Create another user</a>
                     </div>    
                 </div>
                 
