--- a/src/main/resources/templates/deletedUser.html
+++ b/src/main/resources/templates/deletedUser.html
@@ -5,8 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+        <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </head>
     <body>
+        
+        <div class="mxy-5" th:replace="fragments/menu :: menu">
+            
+        </div>
+        
         <div class="container">
             
             <div class="mx-auto text-center py-5">
