--- a/src/main/resources/templates/specificUser.html
+++ b/src/main/resources/templates/specificUser.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+        <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
         <style type="text/css">
             .col-centered{
                 float: none;
@@ -13,6 +15,10 @@
         </style>
     </head>
     <body>
+        
+        <div class="mxy-5" th:replace="fragments/menu :: menu">
+            
+        </div>
         
         <div class="container">
            
