--- a/src/main/resources/templates/userDeleteForm.html
+++ b/src/main/resources/templates/userDeleteForm.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/pure-min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/buttons-min.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+        <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
         <style type="text/css">
             .button-error
             {
@@ -20,6 +23,11 @@
         </style>
     </head>
     <body>
+        
+        <div th:replace="fragments/menu :: menu">
+            
+        </div>
+        
          <div class="pure-g">
             <div class="pure-u-1-3"><!--pure-u-md-1-3-->
             </div>
