--- a/src/main/resources/templates/userUpdateForm.html
+++ b/src/main/resources/templates/userUpdateForm.html
@@ -7,6 +7,8 @@
         <link type="text/css" rel="stylesheet" th:href="@{/css/pure-min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/buttons-min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+        <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
         <style type="text/css">
             .button-secondary {
                 background: rgb(66, 184, 221); /* this is a light blue */
@@ -25,6 +27,11 @@
         </style>
     </head>
     <body>
+        
+        <div th:replace="fragments/menu :: menu">
+            
+        </div>
+        
         <div class="pure-g">
             <div class="pure-u-1-3"><!--pure-u-md-1-3-->
                 
