Add div to show error message when a user try to delete a genre by tweaking the html source to remove the genre to delete

--- a/src/main/resources/templates/musicGenre/genreDeleteForm.html
+++ b/src/main/resources/templates/musicGenre/genreDeleteForm.html
@@ -41,7 +41,7 @@
                         
                         <label for="genreName">Genre Name : </label>
                         <input type="text" th:field="*{genreName}" id="genreName" readonly/>
-
+                        <div id="alert-name" class="pure-u-2-5 alert alert-danger my-2" role="alert" th:if="${#fields.hasErrors('genreName')}" th:errors="*{genreName}"></div>
                                               
                         <br/>
                         <button type="submit" class="button-error pure-button">
