Add the menu button for genre

--- a/src/main/resources/templates/deletedUser.html
+++ b/src/main/resources/templates/deletedUser.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{/css/menu_style.css}" />
         <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
         <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </head>
@@ -27,7 +28,7 @@
                
                 <div class="card text-white bg-danger mb-3">
                     
-                    <div class="card-header">Edition Success</div>
+                    <div class="card-header">Deletion Success</div>
                     <div class="card-body">
                         <h5 class="card-title">User deleted</h5>
                         <p class="card-text">
