--- a/src/main/resources/templates/musicGenre/createdGenre.html
+++ b/src/main/resources/templates/musicGenre/createdGenre.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{/css/menu_style.css}" />
         <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
         <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
         
