--- a/src/main/resources/templates/musicGenre/deletedGenre.html
+++ b/src/main/resources/templates/musicGenre/deletedGenre.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{/css/menu_style.css}" />
         <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
         <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </head>
