--- a/src/main/resources/templates/musicGenre/genreCreateForm.html
+++ b/src/main/resources/templates/musicGenre/genreCreateForm.html
@@ -6,12 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Genre Creation</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/pure-min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/buttons-min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{/css/menu_style.css}" />
         <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
         
         <style type="text/css">
