--- a/src/main/resources/templates/musicGenre/genreUpdateForm.html
+++ b/src/main/resources/templates/musicGenre/genreUpdateForm.html
@@ -8,6 +8,7 @@
         <link type="text/css" rel="stylesheet" th:href="@{/css/pure-min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/buttons-min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{/css/menu_style.css}" />
         <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
         <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
         
