--- a/src/main/resources/templates/musicGenre/specificGenre.html
+++ b/src/main/resources/templates/musicGenre/specificGenre.html
@@ -2,11 +2,12 @@
 
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title th:text='${foundGenre.genreName}'></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+        <link type="text/css" rel="stylesheet" th:href="@{/css/menu_style.css}" />
         <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
         <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
         <style type="text/css">
