--- a/src/main/resources/templates/musicGenre/genreList.html
+++ b/src/main/resources/templates/musicGenre/genreList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>List of Genres</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/pure-min.css}" />
