Modify the view title

--- a/src/main/resources/templates/musicGenre/specificGenre.html
+++ b/src/main/resources/templates/musicGenre/specificGenre.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title th:text='${foundGenre.genreName}'></title>
+        <title th:text='${"Genre : "+foundGenre.genreName}'></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
