Correct the vocabulary

--- a/src/main/resources/templates/musicCategory/categoryNotFoundException.html
+++ b/src/main/resources/templates/musicCategory/categoryNotFoundException.html
@@ -32,7 +32,7 @@ and open the template in the editor.
             <div class="form-group col-md-4 mx-auto">
                 <div class="card text-white bg-warning mb-3">
                     
-                    <div class="card-header" th:text="${'No Suitable Catgeory To '+actionType}"></div>
+                    <div class="card-header" th:text="${'No Suitable Category To '+actionType}"></div>
                     <div class="card-body">
                         <h5 class="card-title">Warning : No Category Found</h5>
                         <p class="card-text" th:text="${'The category you are trying to '+actionVerb+ ' is not found :'}">
