--- a/src/main/resources/templates/musicGenre/deletedGenre.html
+++ b/src/main/resources/templates/musicGenre/deletedGenre.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>User Deletion Result</title>
+        <title>Genre Deletion Result</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
@@ -18,7 +18,7 @@
         <div class="container">
             
             <div class="mx-auto text-center py-5">
-                <h1 class="display-4 px-2">User Deletion Result</h1>
+                <h1 class="display-4 px-2">Genre Deletion Result</h1>
             </div>
             
             <div class="form-group col-md-4">
