--- a/src/main/resources/templates/musicGenre/specificGenre.html
+++ b/src/main/resources/templates/musicGenre/specificGenre.html
@@ -24,7 +24,7 @@
         <div class="container">
            
             <div class="mx-auto text-center py-5">
-                <h1 class="display-4 px-2">User Features</h1>
+                <h1 class="display-4 px-2">Genre Features</h1>
             </div>
             
             <div class="form-group col-md-4">
