Add style to override the backgroundcolor given by the materialize.css library and keep the menu buttons as they were

--- a/src/main/resources/static/css/menu_style.css
+++ b/src/main/resources/static/css/menu_style.css
@@ -11,3 +11,11 @@ and open the template in the editor.
 .float-menu{
     display: inline-flex;
 }
+
+#btn-user{
+    background-color: #007bff;
+}
+
+#btn-genre{
+    background-color: #28a745;
+}
