Modify the title view to be correct

--- a/src/main/resources/templates/musicCategory/categoryCreateForm.html
+++ b/src/main/resources/templates/musicCategory/categoryCreateForm.html
@@ -41,7 +41,7 @@
                 <form class="pure-form pure-form-stacked" action="#" th:action="@{/categories/create}" th:object="${categoryDTO}" method="POST">
                     
                     <fieldset>
-                        <legend>Ctaegory Creation Form</legend>
+                        <legend>Category Creation Form</legend>
                         
                         <label for="categoryName">Category Name : </label>
                         <input type="text" th:field="*{categoryName}" id="categoryName"/>
