Modify the view title to be relative to the action of the page

--- a/src/main/resources/templates/musicCategory/createdCategory.html
+++ b/src/main/resources/templates/musicCategory/createdCategory.html
@@ -19,7 +19,7 @@
         
         <div class="container">
             <div class="mx-auto text-center py-5">
-                <h1 class="display-4 px-2">Genre Creation Result</h1>
+                <h1 class="display-4 px-2">Category Creation Result</h1>
             </div>
             
             <div class="form-group col-md-4">
